log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: rakhicc/log-output-node:v15
          readinessProbe:
            httpGet:
              path: /health
              port: 3008
            initialDelaySeconds: 5
            periodSeconds: 5
          imagePullPolicy: Always
          volumeMounts:          # ✅ must be inside container
            - name: config-volume
              mountPath: /etc/config
              readOnly: true

      volumes:                  # ✅ same level as containers
        - name: config-volume
          configMap:
            name: log-output-config
